--- a/border.html
+++ b/border.html
@@ -1,5 +1,12 @@
 <!-css border attribute-->
+<style>
+	.border1
+{
+	border-style: dotted;
+}
+</style>
 <a href="" style="border-style:dotted;">home</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="" class="border1" >home1</a>
 <a herf=""  style="border-style:solid; border-color:red; border-width:5px;">contace us</a>
 <p style="border-style:dashed;">welcome 123</p>
 <span style="border-style:groove;">welcome 123</span>
