--- a/1.html
+++ b/1.html
@@ -1,18 +1,24 @@
-<!--html-->
-<p bgcolor='red'>welcome</>
+<style>
+	.box{
+		width: 300px;
+		height: 300px;
+		background-color: brown;
+		color: aqua;
+		align-self: center;
+	display: flex;
+	justify-content: center;
+	/* justify-self: unset; */
+	padding : 3pc;
+	margin: 3pc;
+		border-radius: 10pc 10pc 10pc 10pc;
+	}
+</style>
+<input type="text" style="height: 50px; weight: 150px; border-radius: 10px;" >
 <br>
-<!--css-->
-<p style="background-color:red; ">come</p>
-<br><br>
-<!--html-->
-<a href="">home</a>
-<br><br>
-<!--css-->
-<a href="" style="text-decoration:none;">home</a>
-<br><br>
-<!--html-->
-<a href=""><font color=orange size=5 face=arial>contace us </fonr></a>
-<br><br>
-<!--css-->
-<a href="" style=color:orange; font-size:25px; font-family:arial; text-decoration:none;">contact us </a>
+<input type="text" style="height: 50px; wight: 250px; border-top-right-radius: 20px;">
+<br>
+<p class="box">hello my name is laxit solanki </p>
+<input type="text" style="height: 50px; wight: 250px; border-top-right-radius: 20px 10px 5px 30px; background-color: green; color: white; padding: 20px;">
+<br>
+<input type="button" name="" value="registration" style="height: 50px; width: 150px; border-radius: 20px 10px 5x 15px; "></ins>
 <div style="padding: 20px; color: white;background-color: black; font-size: 1.4em;"> design by: laxit solanki</div>
